k8s/bin/sonar/deployments.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: sonar
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: sonar-mysql
  namespace: sonar
  labels:
    app: sonar-mysql
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: sonar-mysql
    spec:
      containers:
      - image: mysql:5.7
        name: sonar-mysql
        ports:
        - containerPort: 3306
        volumeMounts:
         - name: mysql-data
           mountPath: /var/lib/mysql
      volumes:
      - name: mysql-data
        persistentVolumeClaim:
          claimName: sonar-storage-claim
---
apiVersion: v1
kind: Service
metadata:
  name: sonar-mysql
  namespace: sonar
  labels:
    name: sonar-mysql
spec:
  ports:
    - name: mysql
      # port: is the abstracted Service port,
      # which can be any port other pods use to access the Service
      port: 3306
  selector:
    app: sonar-mysql
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: sonar
  namespace: sonar
  labels:
    app: sonar
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: sonar
    spec:
      containers:
      - name: sonarqube
        image: sonarqube:6.5
        ports:
        - name: sonarqube
          containerPort: 9000
        volumeMounts:
         - name: sonarqube-extensions
           mountPath: /opt/sonarqube/extensions
         - name: sonarqube-data
           mountPath: /opt/sonarqube/data
      volumes:nfs
      - name: sonarqube-extensions
        hostPath:
          path: "/data/sonarqube/extensions"
      - name: sonarqube-data
        hostPath:
          path: "/data/sonarqube/data"
          readOnly: false
---
apiVersion: v1
kind: Service
metadata:
  name: sonar
  namespace: sonar
  labels:
    name: sonar
spec:
  ports:
  - protocol: TCP
    # port: is the abstracted Service port
    # which can be any port other pods use to access the Service
    port: 80
    # targetPort: is the port the container accepts traffic on
    targetPort: 9000
  selector:
    app: sonar
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: sonar-ingress
  namespace: sonar
spec:
  tls:
  - hosts:
    - sonar.gce.k8m.k8cluster.io
    - sonar.gce.k8n1.k8cluster.io
    secretName: sonar-secret
  rules:
  - host: sonar.gce.k8m.k8cluster.io
    http:
      paths:
      - path: /
        backend:
          serviceName: sonar
          servicePort: 80
  - host: sonar.gce.k8n1.k8cluster.io
    http:
      paths:
      - path: /
        backend:
          serviceName: sonar
          servicePort: 80
